changed flexbox divs to be three widget/column modules

--- a/css/main.css
+++ b/css/main.css
@@ -97,35 +97,57 @@ textarea {
 
 
 html {
-  background-color: #fff;
+  background-color: #1a1a1a;
   height: 100%;
 }
 
 body {
   font-family: 'Source Sans Pro', sans-serif;
-  padding: 2em;
-  font-size: 1.25em;
+  padding: 1em;
+  font-size: 1.45em;
   height: 100%;
 }
 
 .wrapper {
-  /*add display:flex and set justify-content to space-between*/
-  font-weight: 700;
+  font-weight: 400;
   display: flex;
   justify-content: space-between;
+  border-top: 4px solid #595959;
+  border-bottom: 4px solid #595959;
+  padding-top: 2em;
+  padding-bottom: 2em;
 }
 
 .div-1, .div-2, .div-3 {
-  /*give the divs a width of 30%, add display:flex, set justify-content and align-items to center*/
-  color: #fff;
+  color: #f2f2f2;
   line-height: 1.5em;
-  font-size: 1.6em;
-  background-color: #f16059;
+  font-size: 1.125em;
+  background-color: #1a1a1a;
   height: 300px;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 30%;
+  padding: 0 1em 0 0;
+  
+}
+
+.div-2, .div-3 {
+  border-left: 2px solid #595959;
+  padding-left: 1.65em;
+}
+
+section div p {
+  margin: 0 1.5em 0 0;
+}
+
+.font {
+  font-family: 'Lora', serif;
+  font-weight: bold;
+}
+
+.capital {
+  text-transform: uppercase;
 }
 
 
