--- a/css/main.css
+++ b/css/main.css
@@ -103,7 +103,7 @@ html {
 
 body {
   font-family: 'Source Sans Pro', sans-serif;
-  padding: 1em;
+  padding: 2em;
   font-size: 1.45em;
   height: 100%;
 }
@@ -112,6 +112,7 @@ body {
   font-weight: 400;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   border-top: 4px solid #595959;
   border-bottom: 4px solid #595959;
   padding-top: 2em;
@@ -129,6 +130,7 @@ body {
   align-items: center;
   width: 30%;
   padding: 0 1em 0 0;
+  /*height: auto; */
   
 }
 
