--- a/css/main.css
+++ b/css/main.css
@@ -99,35 +99,17 @@ textarea {
 html {
   background-color: #1a1a1a;
   height: 100%;
+  width: 100%;
+
 }
 
 body {
   font-family: 'Source Sans Pro', sans-serif;
-  padding: 2em;
-  font-size: 1.45em;
-  height: 100%;
-}
-
-header, main, footer {
+  padding: 0 2em;
+  font-size: 1.25em;
   display: flex;
   justify-content: center;
-  align-items: center;
   color: #f2f2f2;
-}
-
-h1 {
-  font-size: 3em;
-  margin-top: -0.2em;
-  margin-bottom: -0.1em;
-}
-
-h1 span { 
-color: #FF5E5B;
- }
-
-main {
-  font-size: 1.4em;
-  padding-bottom: 1em;
 }
 
 .wrapper {
@@ -136,37 +118,39 @@ main {
   justify-content: space-between;
   align-items: center;
   flex-flow: row wrap;
+  max-width: 1200px;
  } 
 
-.line-breaker {
+header, footer {
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+}
+
+header h1 {
+  font-size: 3em;
+  margin-bottom: -0.1em;
+}
+
+h1 span { 
+color: #FF5E5B;
+ }
+
+main {
+  width: 100%;
+  font-size: 1.4em;
+  padding-bottom: 1em;
   display: flex;
   justify-content: center;
-  align-items: center;
-  border-top: 4px solid #595959;
   border-bottom: 4px solid #595959;
-  padding-top: 2em;
-  padding-bottom: 2em; 
 }
 
 .div-1, .div-2, .div-3 {
-  color: #f2f2f2;
   line-height: 1.5em;
   font-size: 1.125em;
-  background-color: #1a1a1a;
-  height: 320px;
   display: flex;
   justify-content: center;
-  align-items: center;
-  width: 30%;
-}
-
-.div-2, .div-3 {
-  border-left: 2px solid #595959;
-  padding-left: 1.65em;
-}
-
-section div p {
-  margin: 0 1.5em 0 0;
+  border-bottom: 1px solid #555;
 }
 
 .font {
@@ -179,9 +163,13 @@ section div p {
 }
 
 footer {
-  padding-top: 2em;
+  padding: 2em 0;
+  border-top: 4px solid #595959;
 }
 
+footer a {
+  padding: 0 20px 0 0;
+}
 
 
 /* ==========================================================================
@@ -269,6 +257,33 @@ footer {
        (min-resolution: 1.25dppx),
        (min-resolution: 120dpi) {
     /* Style adjustments for high resolution devices */
+}
+
+@media (min-width: 768px) {
+
+body { 
+  padding: 2em; 
+}
+
+}
+
+@media (min-width: 1200px) {
+
+  .div-1, .div-3 {
+    width: 28%;
+    border: none;
+  }
+
+  .div-2 {
+    width: 34%;
+    border: none;
+  }
+
+  .div-2 p {
+  padding: 1.7em;
+  border-left: 1px solid #555;
+  border-right: 1px solid #555;
+  }
 }
 
 /* ==========================================================================
